src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>CompletedAnswers__c</fullName>
        <label>Completed Answers</label>
        <summaryFilterItems>
            <field>Answer__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Answer__c.Questionnaire__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DoATriggers__c</fullName>
        <label>DoA Triggers</label>
        <summaryFilterItems>
            <field>Answer__c.DoATrigger__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Answer__c.Questionnaire__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <formula>CompletedAnswers__c / TotalAnswers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectRegion__c</fullName>
        <formula>QuestionnaireSet__r.Project__r.pse__Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRisk__c</fullName>
        <label>Project Risk</label>
        <summaryFilterItems>
            <field>Answer__c.IsRisk__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Answer__c.Questionnaire__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QuestionnaireSet__c</fullName>
        <label>QuestionnaireSet</label>
        <referenceTo>QuestionnaireSet__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionnaireTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>QuestionnaireTemplate</label>
        <referenceTo>QuestionnaireTemplate__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAnswers__c</fullName>
        <label>Total Answers</label>
        <summaryForeignKey>Answer__c.Questionnaire__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalUnanswered__c</fullName>
        <label>Total Unanswered</label>
        <summaryFilterItems>
            <field>Answer__c.Value__c</field>
            <operation>notEqual</operation>
            <value>Yes, No, Unknown</value>
        </summaryFilterItems>
        <summaryForeignKey>Answer__c.Questionnaire__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>